# RecentFileExplorer

./: CMakeLists.txt  README.md  reg_entry.reg.txt  resource.rc
include/: KeyPressHandler.hh  QListViewWithCleanup.hh  RecentFileModel.hh  util.hh
src/: KeyPressHandler.cc  RecentFileModel.cc  main.cc  util.cc
